#73943 fix paypal button z-index

--- a/Snowdog_Components/components/Organisms/order-summary/_order-summary.scss
+++ b/Snowdog_Components/components/Organisms/order-summary/_order-summary.scss
@@ -158,5 +158,8 @@
     &__product-price {
         font-size: $order-summary__product-price-font-size;
     }
-}
 
+    .zoid-outlet {
+        z-index: 0;
+    }
+}
