--- a/Snowdog_Components/components/Templates/product-view/_product-view.scss
+++ b/Snowdog_Components/components/Templates/product-view/_product-view.scss
@@ -731,4 +731,8 @@
             bottom: $product-view__grecaptcha-badge-bottom\@medium !important;
         }
     }
+
+    .paypal-express-checkout {
+        z-index: 0;
+    }
 }
